; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_cat-file.c_batch_object_cb.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_cat-file.c_batch_object_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.object_cb_data = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*, i8*)* @batch_object_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @batch_object_cb(%struct.object_id* %0, i8* %1) #0 {
  %3 = alloca %struct.object_id*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.object_cb_data*, align 8
  store %struct.object_id* %0, %struct.object_id** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.object_cb_data*
  store %struct.object_cb_data* %7, %struct.object_cb_data** %5, align 8
  %8 = load %struct.object_cb_data*, %struct.object_cb_data** %5, align 8
  %9 = getelementptr inbounds %struct.object_cb_data, %struct.object_cb_data* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.object_id*, %struct.object_id** %3, align 8
  %13 = call i32 @oidcpy(i32* %11, %struct.object_id* %12)
  %14 = load %struct.object_cb_data*, %struct.object_cb_data** %5, align 8
  %15 = getelementptr inbounds %struct.object_cb_data, %struct.object_cb_data* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.object_cb_data*, %struct.object_cb_data** %5, align 8
  %18 = getelementptr inbounds %struct.object_cb_data, %struct.object_cb_data* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.object_cb_data*, %struct.object_cb_data** %5, align 8
  %21 = getelementptr inbounds %struct.object_cb_data, %struct.object_cb_data* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = call i32 @batch_object_write(i32* null, i32 %16, i32 %19, %struct.TYPE_2__* %22)
  ret i32 0
}

declare dso_local i32 @oidcpy(i32*, %struct.object_id*) #1

declare dso_local i32 @batch_object_write(i32*, i32, i32, %struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
